k8s/apps/redpanda/tailscale.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-console
  namespace: redpanda
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "redpanda-console"
    tailscale.com/port: "8080"
