k8s/apps/redpanda/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redpanda-console
  namespace: redpanda
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`redpanda.fomiller.com`)
      kind: Rule
      services:
        - name: redpanda-console
          port: 8080
